Ticket #29108: Migrate the composition table and the React-table demo off the legacy ReactTableControl.
Add a React-tier CellControlFactory escape hatch: CellContentReactAdapter renders a CellContent.Raw whose payload is a CellControlFactory by invoking it, so green-field columns can host bespoke cell controls (typed field inputs, action buttons).

CompositionTableControl (<composition-table>) now renders through TableViewControl instead of ObjectTableModel/ReactTableControl: data columns build their edit-mode field controls (via FieldControlService) and the detail/delete action buttons through Raw cells; rows refresh via ListRowSource.setElements + refreshData. All form/validation/overlay logic is unchanged. Also fix a pre-existing bug where the Add button was pushed under the wrong panel state key ("toolbarButtons"); TLPanel renders a single "toolbar" control, so the button is now wrapped in a ReactToolbarControl and actually appears (the constraint-test demo requires >=1 item, so creation was previously impossible).

DemoReactTableComponent now builds its 1000-row flat table on ListRowSource and its tree table on TreeRowSource, both via TableViewControl.